--- a/proxy.conf
+++ b/proxy.conf
@@ -6,7 +6,7 @@ server {
 
     location /medicalReport {
         #shell执行 printf "actanble:$(openssl passwd -crypt 112233..)\n" >> /etc/nginx/conf.d/passwd
-        auth_basic "用户名微信号。密码112233..";
+        auth_basic "--auth---";
         auth_basic_user_file conf.d/passwd;
         proxy_pass https://report.rich-healthcare.com/medicalReport;
         proxy_redirect off;
